--- a/graduation-front/package.json
+++ b/graduation-front/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.15.0",
-    "react-lazy-load": "^4.0.1"
+    "react-lazy-load": "^4.0.1",
+    "react-router-dom": "^7.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
