--- a/graduation-front/package.json
+++ b/graduation-front/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fraduation-front",
+  "name": "Membership-program-for-private-family-planning-providers",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "framer-motion": "^11.18.0",
+    "query-string": "^9.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
