--- a/graduation-front/package.json
+++ b/graduation-front/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.0",
     "framer-motion": "^11.18.0",
     "query-string": "^9.1.1",
     "react": "^18.3.1",
