--- a/graduation-front/package.json
+++ b/graduation-front/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^11.18.0",
     "query-string": "^9.1.1",
     "react": "^18.3.1",
+    "react-confetti": "^6.2.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.15.0",
