--- a/graduation-front/package.json
+++ b/graduation-front/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.0",
     "framer-motion": "^11.18.0",
+    "lucide-react": "^0.474.0",
+    "membership-program-for-private-family-planning-providers": "file:",
     "query-string": "^9.1.1",
     "react": "^18.3.1",
     "react-confetti": "^6.2.2",
@@ -22,7 +24,9 @@
     "react-intersection-observer": "^9.15.0",
     "react-lazy-load": "^4.0.1",
     "react-router-dom": "^7.1.2",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "recharts": "^2.15.0",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
