adding course services

--- a/backend/api-gateway/src/main/resources/application.properties
+++ b/backend/api-gateway/src/main/resources/application.properties
@@ -12,6 +12,12 @@ eureka.instance.prefer-ip-address=true
 spring.cloud.gateway.routes[0].id=user-services
 spring.cloud.gateway.routes[0].uri=http://localhost:8089
 spring.cloud.gateway.routes[0].predicates[0]=Path=/users/**
+# Gateway Routes (Connecting to Courses Services)
+spring.cloud.gateway.routes[1].id=course-management-services
+spring.cloud.gateway.routes[1].uri=http://localhost:8087
+spring.cloud.gateway.routes[1].predicates[0]=Path=/enrollments/**, /courses/**
+
+
 
 # Logging for debugging purposes (optional)
 
