--- a/backend/course-management-services/src/main/resources/application.properties
+++ b/backend/course-management-services/src/main/resources/application.properties
@@ -28,3 +28,16 @@ spring.datasource.url=jdbc:mysql://localhost:3307/grad
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
+
+
+# Enable multipart file uploads
+spring.servlet.multipart.enabled=true
+
+# Maximum file size (e.g., 10MB)
+spring.servlet.multipart.max-file-size=10MB
+
+# Maximum request size (e.g., 10MB)
+spring.servlet.multipart.max-request-size=10MB
+
+# Location to store uploaded files temporarily
+spring.servlet.multipart.location=/tmp
