--- a/backend/api-gateway/src/main/resources/application.properties
+++ b/backend/api-gateway/src/main/resources/application.properties
@@ -12,6 +12,8 @@ eureka.instance.prefer-ip-address=true
 spring.cloud.gateway.routes[0].id=user-services
 spring.cloud.gateway.routes[0].uri=http://localhost:8089
 spring.cloud.gateway.routes[0].predicates[0]=Path=/users/**
+spring.cloud.gateway.routes[0].predicates[1]=Path=/login/**
+
 # Gateway Routes (Connecting to Courses Services)
 spring.cloud.gateway.routes[1].id=course-management-services
 spring.cloud.gateway.routes[1].uri=http://localhost:8087
