--- a/graduation-front/package.json
+++ b/graduation-front/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.0",
+    "axois": "^0.0.1-security",
     "framer-motion": "^11.18.0",
     "lucide-react": "^0.474.0",
     "membership-program-for-private-family-planning-providers": "file:",
