--- a/backend/api-gateway/src/main/resources/application.properties
+++ b/backend/api-gateway/src/main/resources/application.properties
@@ -11,7 +11,7 @@ eureka.instance.prefer-ip-address=true
 # Gateway Routes (Connecting to User Services)
 spring.cloud.gateway.routes[0].id=user-services
 spring.cloud.gateway.routes[0].uri=http://localhost:8089
-spring.cloud.gateway.routes[0].predicates[0]=Path=/users/**
+spring.cloud.gateway.routes[0].predicates[0]=Path=/users/** ,/**
 spring.cloud.gateway.routes[0].predicates[1]=Path=/login/**
 
 # Gateway Routes (Connecting to Courses Services)
