--- a/backend/api-gateway/src/main/resources/application.properties
+++ b/backend/api-gateway/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.cloud.gateway.routes[0].predicates[1]=Path=/login/**
 # Gateway Routes (Connecting to Courses Services)
 spring.cloud.gateway.routes[1].id=course-management-services
 spring.cloud.gateway.routes[1].uri=http://localhost:8087
-spring.cloud.gateway.routes[1].predicates[0]=Path=/enrollments/**, /courses/**
+spring.cloud.gateway.routes[1].predicates[0]=Path=/enrollments/**, /api/**
 
 
 
