--- a/backend/course-management-services/src/main/resources/application.properties
+++ b/backend/course-management-services/src/main/resources/application.properties
@@ -32,12 +32,15 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Enable multipart file uploads
 spring.servlet.multipart.enabled=true
-
-# Maximum file size (e.g., 10MB)
-spring.servlet.multipart.max-file-size=10MB
-
-# Maximum request size (e.g., 10MB)
-spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
 
 # Location to store uploaded files temporarily
 spring.servlet.multipart.location=/tmp
+
+
+
+
+
+
+spring.web.resources.static-locations=file:uploads/
