--- a/backend/api-gateway/src/main/resources/application.properties
+++ b/backend/api-gateway/src/main/resources/application.properties
@@ -1,35 +1,36 @@
-# Application Name
+# Application Name and Basic Config
 spring.application.name=api-gateway
-
-# Server Port
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
 server.port=8084
 
-# Eureka Client Configuration
+# Eureka Configuration
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 
-# Gateway Routes (Connecting to User Services)
+# Single CORS Configuration
+spring.cloud.gateway.default-filters[0]=DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials
+spring.cloud.gateway.globalcors.add-to-simple-url-handler-mapping=true
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedOrigins=http://localhost:5173
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedMethods=GET,POST,PUT,DELETE,OPTIONS
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowedHeaders=*
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].allowCredentials=true
+spring.cloud.gateway.globalcors.corsConfigurations.[/**].maxAge=3600
+
+# Routes Configuration
 spring.cloud.gateway.routes[0].id=user-services
 spring.cloud.gateway.routes[0].uri=http://localhost:8089
-spring.cloud.gateway.routes[0].predicates[0]=Path=/users/** ,/**
-spring.cloud.gateway.routes[0].predicates[1]=Path=/login/**
+spring.cloud.gateway.routes[0].predicates[0]=Path=/users/**
 
-# Gateway Routes (Connecting to Courses Services)
 spring.cloud.gateway.routes[1].id=course-management-services
 spring.cloud.gateway.routes[1].uri=http://localhost:8087
-spring.cloud.gateway.routes[1].predicates[0]=Path=/enrollments/**, /api/**
+spring.cloud.gateway.routes[1].predicates[0]=Path=/enrollments/**, /api/**, /uploads/**
 
-
-
-# Logging for debugging purposes (optional)
-
-logging.level.org.springframework.cloud.gateway=DEBUG
-logging.level.org.springframework.cloud.netflix.eureka=DEBUG
-
-
+# Discovery and Logging
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.retry.initial-interval=1000
 spring.cloud.gateway.discovery.locator.retry.max-interval=5000
 spring.cloud.gateway.discovery.locator.retry.max-attempts=5
 
-
+logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.org.springframework.cloud.netflix.eureka=DEBUG
