--- a/backend/course-management-services/src/main/resources/application.properties
+++ b/backend/course-management-services/src/main/resources/application.properties
@@ -7,7 +7,6 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.hostname=localhost
 eureka.instance.prefer-ip-address=true
 spring.cloud.config.enabled=false
-
 eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 # Logging
@@ -44,3 +43,7 @@ spring.servlet.multipart.location=/tmp
 
 
 spring.web.resources.static-locations=file:uploads/
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedOrigins=http://localhost:5173
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedMethods=*
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedHeaders=*
+spring.cloud.gateway.globalcors.cors-configurations.[/**].allowCredentials=true
