--- a/backend/course-management-services/pom.xml
+++ b/backend/course-management-services/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
 
+        <dependency>
+    <groupId>com.mysql</groupId>
+    <artifactId>mysql-connector-j</artifactId>
+</dependency>
+
         <!-- Spring Security for Thymeleaf -->
         <dependency>
             <groupId>org.thymeleaf.extras</groupId>
