--- a/backend/course-management-services/src/main/resources/application.properties
+++ b/backend/course-management-services/src/main/resources/application.properties
@@ -47,3 +47,9 @@ spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedOrigins=http://
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedMethods=*
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowedHeaders=*
 spring.cloud.gateway.globalcors.cors-configurations.[/**].allowCredentials=true
+
+
+# Correct Feign timeout properties
+spring.cloud.openfeign.client.config.default.connect-timeout=3000000
+spring.cloud.openfeign.client.config.default.read-timeout=3000000
+logging.level.com.grad.course_management_services.clients.SummarizationServiceClient=DEBUG
