--- a/backend/api-gateway/src/main/resources/application.properties
+++ b/backend/api-gateway/src/main/resources/application.properties
@@ -26,6 +26,10 @@ spring.cloud.gateway.routes[1].id=course-management-services
 spring.cloud.gateway.routes[1].uri=http://localhost:8087
 spring.cloud.gateway.routes[1].predicates[0]=Path=/enrollments/**, /api/**, /uploads/**
 
+spring.cloud.gateway.routes[2].id=summarization-service
+spring.cloud.gateway.routes[2].uri=http://localhost:8090
+spring.cloud.gateway.routes[2].predicates[0]=Path=/summarize/** , /demo/**
+
 # Discovery and Logging
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.retry.initial-interval=1000
