Login w logut fel front w profile page

--- a/backend/user-services/pom.xml
+++ b/backend/user-services/pom.xml
@@ -105,6 +105,13 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+         <!-- devttols -->
+        <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-devtools</artifactId>
+    <optional>true</optional>
+</dependency>
+
         
         <!-- Jakarta Servlet API -->
         <dependency>
