--- a/graduation-front/package.json
+++ b/graduation-front/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.0",
+    "@vitalets/google-translate-api": "^9.2.1",
     "axios": "^1.7.9",
     "axois": "^0.0.1-security",
     "framer-motion": "^11.18.0",
@@ -29,6 +30,7 @@
     "react-router-dom": "^7.1.2",
     "react-scripts": "^5.0.1",
     "recharts": "^2.15.0",
+    "swiper": "^11.2.2",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
