--- a/graduation-front/package.json
+++ b/graduation-front/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.0",
     "@vitalets/google-translate-api": "^9.2.1",
+    "antd": "^5.23.4",
     "axios": "^1.7.9",
     "axois": "^0.0.1-security",
     "framer-motion": "^11.18.0",
