--- a/backend/api-gateway/src/main/resources/application.properties
+++ b/backend/api-gateway/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.cloud.gateway.globalcors.corsConfigurations.[/**].maxAge=3600
 # Routes Configuration
 spring.cloud.gateway.routes[0].id=user-services
 spring.cloud.gateway.routes[0].uri=http://localhost:8089
-spring.cloud.gateway.routes[0].predicates[0]=Path=/users/** , /feedback/**
+spring.cloud.gateway.routes[0].predicates[0]=Path=/users/** , /feedback/** ,/api/v1/auth/**
 
 spring.cloud.gateway.routes[1].id=course-management-services
 spring.cloud.gateway.routes[1].uri=http://localhost:8087
