--- a/backend/api-gateway/src/main/resources/application.properties
+++ b/backend/api-gateway/src/main/resources/application.properties
@@ -30,6 +30,10 @@ spring.cloud.gateway.routes[2].id=summarization-service
 spring.cloud.gateway.routes[2].uri=http://localhost:8090
 spring.cloud.gateway.routes[2].predicates[0]=Path=/summarize/** , /demo/**
 
+spring.cloud.gateway.routes[3].id=chatbot-service
+spring.cloud.gateway.routes[3].uri=http://localhost:8099
+spring.cloud.gateway.routes[3].predicates[0]=Path=/chatbot/** , /api/** , /chat/**
+
 # Discovery and Logging
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.retry.initial-interval=1000
