--- a/backend/api-gateway/src/main/resources/application.properties
+++ b/backend/api-gateway/src/main/resources/application.properties
@@ -34,6 +34,14 @@ spring.cloud.gateway.routes[3].id=chatbot-service
 spring.cloud.gateway.routes[3].uri=http://localhost:8099
 spring.cloud.gateway.routes[3].predicates[0]=Path=/chatbot/** , /api/** , /chat/**
 
+spring.cloud.gateway.routes[4].id=proctoring-service
+spring.cloud.gateway.routes[4].uri=http://localhost:5000
+spring.cloud.gateway.routes[4].predicates[0]=Path=/proctoring/**
+
+# spring.cloud.gateway.routes[5].id=recommendation-service
+# spring.cloud.gateway.routes[5].uri=http://localhost:8085
+# spring.cloud.gateway.routes[5].predicates[0]=Path=/recommend/**
+
 # Discovery and Logging
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.retry.initial-interval=1000
