--- a/backend/course-management-services/src/main/resources/application.properties
+++ b/backend/course-management-services/src/main/resources/application.properties
@@ -53,3 +53,17 @@ spring.cloud.gateway.globalcors.cors-configurations.[/**].allowCredentials=true
 spring.cloud.openfeign.client.config.default.connect-timeout=3000000
 spring.cloud.openfeign.client.config.default.read-timeout=3000000
 logging.level.com.grad.course_management_services.clients.SummarizationServiceClient=DEBUG
+
+# Email Configuration (using Gmail)
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=os313030@gmail.com
+spring.mail.password=jcvlgmaeclctzwwl
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=*
+spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
