rec on eureka , validation , confidence 90%

--- a/backend/api-gateway/src/main/resources/application.properties
+++ b/backend/api-gateway/src/main/resources/application.properties
@@ -38,9 +38,9 @@ spring.cloud.gateway.routes[4].id=proctoring-service
 spring.cloud.gateway.routes[4].uri=http://localhost:5000
 spring.cloud.gateway.routes[4].predicates[0]=Path=/proctoring/**
 
-# spring.cloud.gateway.routes[5].id=recommendation-service
-# spring.cloud.gateway.routes[5].uri=http://localhost:8085
-# spring.cloud.gateway.routes[5].predicates[0]=Path=/recommend/**
+spring.cloud.gateway.routes[5].id=recommendation-service
+spring.cloud.gateway.routes[5].uri=http://localhost:5001
+spring.cloud.gateway.routes[5].predicates[0]=Path=/recommend/**
 
 # Discovery and Logging
 spring.cloud.gateway.discovery.locator.enabled=true
