--- a/backend/course-management-services/src/main/resources/application.properties
+++ b/backend/course-management-services/src/main/resources/application.properties
@@ -27,6 +27,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/grad
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+logging.level.org.hibernate=DEBUG
 
 
 # Enable multipart file uploads
@@ -57,8 +59,8 @@ logging.level.com.grad.course_management_services.clients.SummarizationServiceCl
 # Email Configuration (using Gmail)
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=os313030@gmail.com
-spring.mail.password=jcvlgmaeclctzwwl
+spring.mail.username=osrapathfinderegypt@gmail.com
+spring.mail.password=qbgqbbzhhqwsqiau
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
@@ -67,3 +69,4 @@ spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
+spring.main.allow-bean-definition-overriding=true
